--- a/yelpcamp/package.json
+++ b/yelpcamp/package.json
@@ -4,6 +4,7 @@
   "description": "Yelp website for camping folks",
   "main": "app.js",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
