--- a/yelpcamp/package.json
+++ b/yelpcamp/package.json
@@ -4,6 +4,7 @@
   "description": "Yelp website for camping folks",
   "main": "app.js",
   "dependencies": {
+    "async": "^3.2.0",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
@@ -12,6 +13,7 @@
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.10.4",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
