--- a/yelpcamp/package.json
+++ b/yelpcamp/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.10.4",
+    "node-geocoder": "^3.27.0",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
