Added start script in package.json

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " cd yelpcamp; nodemon app.js"
+    "start": "nodemon app.js"
   },
   "author": "Bharath Ram",
   "license": "MIT"
